src/main/java/com/example/qlkh/error/status/ErrorStatus.java
package com.example.qlkh.error.status;

/*
* code 412_***
* */
public interface ErrorStatus {
    int getCode();

    String getMessage();
}
